--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Seafood Wave</title>
   </head>
-  <body class="bg-stone-100 text-stone-700">
+  <body class="bg-[#F7FDFF] text-stone-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
