--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       rel="stylesheet"
     />
 
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+
     <title>Seafood Wave</title>
   </head>
   <body class="bg-[#F7FDFF] text-stone-700">
